--- a/src/assets/locales/resources_en_US.json
+++ b/src/assets/locales/resources_en_US.json
@@ -22,5 +22,13 @@
   "last_name_caption": {
     "message": "Last name",
     "_description": "Caption of the last name field."
+  },
+  "my_tile_settings_modal_header_caption": {
+    "message": "My tile settings",
+    "_description": "Modal header for my tile content."
+  },
+  "my_tile_settings_show_welcome_message": {
+    "message": "Show welcome message",
+    "_description": "Checkbox label for welcome message option on my tile settings"
   }
 }
